--- a/tienditacolegial/app/server/client/views/home-page.template.html
+++ b/tienditacolegial/app/server/client/views/home-page.template.html
@@ -3,7 +3,7 @@
 
 <div class = "home-page" flex = "94">
     <h2> Inicio <span><hr></span></h2>
-<img class = "home-image" ng-src= "images/Banners/Inicio-Banner.jpg" height = "450" with = "1100" >
+<img class = "home-image" ng-src= "images/Banners/Inicio-Banner.jpg" height = "450" >
 
     </div>
 </md-content>
