Se modifico el carrito part 2

--- a/tienditacolegial/app/server/client/views/camisas.template.html
+++ b/tienditacolegial/app/server/client/views/camisas.template.html
@@ -17,7 +17,7 @@
                 </div>
 
                 <ngcart-addtocart id="{{camisa.itemid}}" name="{{camisa.itemname}}" price="{{camisa.price}}"
-                                  data="camisa" quantity="1" quantity-max="5" size = "selectedSize">
+                                  data="camisa" quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
