--- a/tienditacolegial/app/server/client/views/itemDetail.template.html
+++ b/tienditacolegial/app/server/client/views/itemDetail.template.html
@@ -26,7 +26,7 @@
             </div>
               <h3>Precio: ${{currentItem.price}}</h3>
 
-              <ngcart-addtocart id="{currentItem.itemid}}" name="{{currentItem.itemname}}"                              price="{{currentItem.price}}" quantity="1" quantity-max="5">
+              <ngcart-addtocart id="{currentItem.itemid}}" name="{{currentItem.itemname}}"                              price="{{currentItem.price}}" quantity="1" quantity-max="5" data = "currentItem">
                   Add to Cart
               </ngcart-addtocart>
           </div>
