Se modificaron todos los sizes y se naden al carrito

--- a/tienditacolegial/app/server/client/views/camisas.template.html
+++ b/tienditacolegial/app/server/client/views/camisas.template.html
@@ -5,7 +5,7 @@
         <br><br><br>
 
         <div layout="row" layout-wrap ng-controller="camisasController">
-            <div flex="30" ng-repeat="camisa in camisas">
+            <div flex="30" ng-repeat="camisa in camisas" >
                 <img class ="itemImage" src="{{camisa.imageurl}}" height="262" length = 200 ng-click="getShirtDetails($event,camisa)">
                 <p> {{camisa.itemname}}</p>
                 <p>${{camisa.price}}</p>
@@ -17,7 +17,7 @@
                 </div>
 
                 <ngcart-addtocart id="{{camisa.itemid}}" name="{{camisa.itemname}}" price="{{camisa.price}}"
-                                  data="camisa" quantity="1" quantity-max="5">
+                                  data=" {item: camisa, size: selectedSize} " quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
