--- a/tienditacolegial/app/server/client/views/gorras.template.html
+++ b/tienditacolegial/app/server/client/views/gorras.template.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <ngcart-addtocart id="{{gorra.itemid}}" name="{{gorra.itemname}}" price="{{gorra.price}}"
-                                  data="gorra" quantity="1" quantity-max="5">
+                                  data="{item: gorra, size: selectedSize}" quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
