--- a/tienditacolegial/app/server/client/views/itemDetail.template.html
+++ b/tienditacolegial/app/server/client/views/itemDetail.template.html
@@ -25,8 +25,13 @@
             <h3>{{currentItem.description}}</h3>
             </div>
               <h3>Precio: ${{currentItem.price}}</h3>
+            <ng-show ng-show = "currentItem.size == 'Mediana'">
 
-              <ngcart-addtocart id="{currentItem.itemid}}" name="{{currentItem.itemname}}"                              price="{{currentItem.price}}" quantity="1" quantity-max="5" data = "currentItem">
+              <md-select placeholder="Tamaño" ng-model = "selectedSize">
+                  <md-option ng-value="itemSize" ng-repeat="itemSize in itemSizes">{{itemSize}}</md-option>
+              </md-select>
+          </ng-show>
+              <ngcart-addtocart id="{currentItem.itemid}}" name="{{currentItem.itemname}}"                             price="{{currentItem.price}}" quantity="1" quantity-max="5" data = "{item:currentItem, size: selectedSize} ">
                   Add to Cart
               </ngcart-addtocart>
           </div>
