--- a/tienditacolegial/app/server/client/views/header.template.html
+++ b/tienditacolegial/app/server/client/views/header.template.html
@@ -32,7 +32,7 @@
       <div class = "searchBar" flex-offset="15">
       <input type="text" placeholder="nombre de articulo" ng-model="itemName">
       </div>
-      <md-button class="md-primary md-raised" ng-hide= "false" ng-model="itemName" ng-click="itemSearch()       "> Busqueda </md-button>
+      <md-button class="md-primary md-raised" ng-hide= "false" ng-model="itemName" ng-click="itemSearch(itemName)"> Busqueda </md-button>
 
 
     </md-nav-bar>
