UPDATE USER COMPLETE

--- a/tienditacolegial/app/server/client/views/editUser.template.html
+++ b/tienditacolegial/app/server/client/views/editUser.template.html
@@ -5,11 +5,11 @@
         overflow-x:hidden;">
 
 
-    <md-toolbar>
+    <!-- <md-toolbar>
         <div  layout="row"  layout-align="center center"  style = "max-height: 100px;">
-            <h1> Editar Informacion</h1>
+            <h1> Editar {{displayMessage}}</h1>
         </div>
-    </md-toolbar>
+    </md-toolbar> -->
 
     <br><br><br><br>
 
