--- a/tienditacolegial/app/server/client/views/account-info.template.html
+++ b/tienditacolegial/app/server/client/views/account-info.template.html
@@ -11,7 +11,7 @@
           <p>{{firstname}}</p>
           <md-input-container ng-hide="true"> <label>Nuevo Nombre</label> <input type="text" id="name2Change" ng-model="name2Change"></md-input-container>
         </div>
-        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'cfirst')">Editar</md-button>
+        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'cfirst','Nombre')">Editar</md-button>
 
         <md-divider ng-if="!$last"></md-divider>
 
@@ -22,7 +22,7 @@
           <p><b> Apellido:</b></p>
           <p>{{lastname}}</p>
         </div>
-        <md-button class="md-primary md-secondary md-raised" layout-align="left" ng-click="editUserInfo($event,'clast')">Editar</md-button>
+        <md-button class="md-primary md-secondary md-raised" layout-align="left" ng-click="editUserInfo($event,'clast','Apellido')">Editar</md-button>
         <md-divider ng-if="!$last"></md-divider>
       </md-list-item>
 
@@ -31,7 +31,7 @@
           <p> <b>Email:</b></p>
           <p>{{email}}</p>
         </div>
-        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'cemail')"> Editar</md-button>
+        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'cemail','Email')"> Editar</md-button>
         <md-divider ng-if="!$last"></md-divider>
       </md-list-item>
 
@@ -40,17 +40,7 @@
           <p><b>Numero de Telefono:</b></p>
           <p>{{phone}}</p>
         </div>
-        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'ctelephone')"> Editar</md-button>
-        <md-divider ng-if="!$last"></md-divider>
-      </md-list-item>
-
-
-      <md-list-item>
-        <div>
-          <p><b>Metodo de Pago:</b></p>
-            <p>{{payMethod}}</p>
-        </div>
-        <md-button class="md-primary md-secondary md-raised"> Editar</md-button>
+        <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'ctelephone','Telefono')"> Editar</md-button>
         <md-divider ng-if="!$last"></md-divider>
       </md-list-item>
 
@@ -59,7 +49,7 @@
           <p><b> Contrasena:</b></p>
           <p>XXXXXXXXXX</p>
         </div>
-        <md-button class="md-primary md-secondary md-raised md-warn"ng-click="editUserInfo($event,'cpassword')"> Editar Contrasena</md-button>
+        <md-button class="md-primary md-secondary md-raised md-warn"ng-click="editUserInfo($event,'cpassword','Contraseña')"> Editar Contrasena</md-button>
         <md-divider ng-if="!$last"></md-divider>
       </md-list-item>
     </md-list>
