Dando toques a User service

--- a/tienditacolegial/app/server/client/views/account.template.html
+++ b/tienditacolegial/app/server/client/views/account.template.html
@@ -53,13 +53,14 @@
         </md-input-container>
 
         <md-input-container >
-          <label>Contrasena</label>
+          <label>Contrasena (6 caracteres o mas.)</label>
           <input type="password" ng-model="newPassword">
         </md-input-container>
 
         <md-input-container >
           <label>Reescribir Contrasena</label>
           <input type="password" ng-model="newRetypePassword">
+
         </md-input-container>
 
         <md-input-container>
