--- a/tienditacolegial/app/server/client/views/account-info.template.html
+++ b/tienditacolegial/app/server/client/views/account-info.template.html
@@ -1,10 +1,10 @@
-  <md-content layout="column" layout-padding="50px">
+  <md-content layout="column" layout-padding="50px" ng-controller="accountInfoCtrl">
 
     <md-whiteframe class="md-whiteframe-1dp">
       <h2>Bienvenido a tu cuenta</h2>
     </md-whiteframe>
 
-    <md-list ng-controller="accountInfoCtrl">
+    <md-list>
       <md-list-item>
         <div>
           <p><b>Nombre:</b></p>
@@ -12,9 +12,6 @@
           <md-input-container ng-hide="true"> <label>Nuevo Nombre</label> <input type="text" id="name2Change" ng-model="name2Change"></md-input-container>
         </div>
         <md-button class="md-primary md-secondary md-raised" ng-click="editUserInfo($event,'cfirst','Nombre')">Editar</md-button>
-        <md-button class="md-primary md-secondary md-raised md-warn" ng-click="seeUser() ; emailVerification()">CURRENT USER</md-button>
-
-
 
         <md-divider ng-if="!$last"></md-divider>
 
