--- a/tienditacolegial/app/server/client/views/update-inventory.template.html
+++ b/tienditacolegial/app/server/client/views/update-inventory.template.html
@@ -21,7 +21,7 @@
 
             <md-input-container >
                 <label> Precio del articulo </label>
-                <input type="text" id="articlePrice " ng-model="articlePrice">
+                <input type="number" id="articlePrice " ng-model="articlePrice">
             </md-input-container>
 
             <md-input-container >
@@ -31,30 +31,31 @@
 
 
             <ng-show ng-show="selectedType == 'Camisa' || selectedType == 'Gorra' || selectedType == 'Pantalon'">
-                <h3> Tamaños en los que el articulo estara disponible y cantidad</h3>
-                <md-content  >
+                <h3> Tamaño del articulo y cantidad. (Solo seleccione un Tamaño)</h3>
+                <md-content>
 
                     <div ng-repeat="itemSize in itemSizes" >
 
 
-                    <input
+                    <input ng-click="updateSelection($index, itemSizes)"
                             type="checkbox"
-                            name="selectedSizes[]"
+
                             value="{{itemSizes.name}}"
                             ng-model="itemSize.selected">
                      {{itemSize.name}}
                         <br>
 
-                    <md-input-container >
-                        <label> Cantidad  </label>
-                        <input type="text" id="cantidad" ng-model="itemSize.cantidad">
-                    </md-input-container>
-                    <br>
-
-
                     </div>
                 </md-content>
+                <md-input-container>
+                    <label> Cantidad </label>
+                    <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
+                </md-input-container>
+                <p>Si desea agregar mas de un tamaño selecione el tamaño y precione "Agregar Articulo", luego selecione
+                el otro tamaño deseado y vuelva a presionar el boton "Agregar Articulo"</p>
+
             </ng-show>
+
 
             <ng-show ng-show="selectedType == 'Libro'" >
                 <md-content class="update-inventory" layout="column" flex = "100" layout-align = "center">
@@ -69,7 +70,7 @@
                 </md-input-container>
                     <md-input-container>
                         <label> Cantidad </label>
-                        <input type="text" id="cantidadArticulo " ng-model="cantidadArticulo">
+                        <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
                     </md-input-container>
                 </md-content>
             </ng-show>
@@ -86,13 +87,13 @@
 
                     <md-input-container>
                         <label> Cantidad </label>
-                        <input type="text" id="cantidadArticulo " ng-model="cantidadArticulo">
+                        <input type="number" id="cantidadArticulo " ng-model="cantidadArticulo">
                     </md-input-container>
                 </md-content>
+
             </ng-show>
 
-
-            <md-button class="md-raised md-primary" ng-click="addItem(articleName, selectedType, descripcion, articlePrice, imageurl, autor, fabricante, casaPublicadora, cantidadArticulo)"> Agregar articulo </md-button>
-            <div flex-offset="10"></div>
+            <md-content layout="column" flex = "80" layout-align = "center">
+            <md-button flex = "80" class="md-raised md-primary" ng-click="addItem(articleName, selectedType,        descripcion, articlePrice, imageurl, autor, fabricante, casaPublicadora, cantidadArticulo)"> Agregar articulo </md-button>
             </md-content>
 </div>
