integrado firebase y sweetalert

--- a/tienditacolegial/app/server/client/views/account.template.html
+++ b/tienditacolegial/app/server/client/views/account.template.html
@@ -12,7 +12,7 @@
 
       <md-input-container>
         <label>Email</label>
-        <input type="email" ng-model="inputEmail">
+        <input type="text" ng-model="inputEmail">
       </md-input-container>
 
       <md-input-container>
