--- a/tienditacolegial/app/server/client/views/camisas.template.html
+++ b/tienditacolegial/app/server/client/views/camisas.template.html
@@ -6,7 +6,7 @@
 
         <div layout="row" layout-wrap ng-controller="camisasController">
             <div flex="30" ng-repeat="camisa in camisas" >
-                <img class ="itemImage" src="{{camisa.imageurl}}" height="262" length = 200 ng-click="getShirtDetails($event,camisa)">
+                <img class ="itemImage" src="{{camisa.imageurl}}" height="262"  width= "250" ng-click="getShirtDetails($event,camisa)">
                 <p> {{camisa.itemname}}</p>
                 <p>${{camisa.price}}</p>
 
